application-service/kubernetes-manifests/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: patient-service-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "hackathon-ingress-static-ip"
spec:
  rules:
    - host: hackathon-test.saikola
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: application-service
                port:
                  number: 3001
